@@ -3011,21 +3011,37 @@ function(dfile)
     enhances <- .get_requires_from_package_db(db, "Enhances")
     allpkgs <- c(depends, imports, suggests, enhances)
     out <- unique(allpkgs[duplicated(allpkgs)])
+    links <- character()
+    llinks <-  .get_requires_with_version_from_package_db(db, "LinkingTo")
+    if(length(llinks)) {
+        llinks <- llinks[sapply(llinks, length) > 1L]
+        if(length(llinks)) links <- sapply(llinks, `[[`, 1L)
+    }
+    out <- list(duplicates = unique(allpkgs[duplicated(allpkgs)]),
+                bad_links = links)
     class(out) <- "check_package_description2"
     out
 }
 
 format.check_package_description2 <- function(x, ...)
 {
-    if(!length(x)) character()
-    else {
-        c(if(length(x) > 1L)
+    c(if(length(xx <- x$duplicates)) {
+        c(if(length(xx) > 1L)
           "Packages listed in more than one of Depends, Imports, Suggests, Enhances:"
-          else
+        else
           "Package listed in more than one of Depends, Imports, Suggests, Enhances:",
-          paste(c(" ", sQuote(x)), collapse = " "),
+          paste(c(" ", sQuote(xx)), collapse = " "),
           "A package should be listed in only one of these fields.")
-    }
+    },
+      if(length(xx <- x$bad_links)) {
+          if(length(xx) > 1L)
+              c("Versioned LinkingTo values for",
+                paste(c(" ", sQuote(xx)), collapse = " "),
+                "are only usable in R >= 3.0.2")
+          else
+              sprintf("Versioned LinkingTo value for %s is only usable in R >= 3.0.2",
+                      sQuote(xx))
+      })
 }
 
 .check_package_description_authors_at_R_field <-
